fixed dark-light:mode and button mobile

--- a/assets/style/mobile.scss
+++ b/assets/style/mobile.scss
@@ -47,6 +47,10 @@
         .project-text.order-1 {
             order: 2 !important;
         }
+
+        span a {
+            font-size: 15px;
+        }
     }
 
     .container-form {
